--- a/apps.json
+++ b/apps.json
@@ -11,21 +11,21 @@
     },
   "apps": [
     {
-     "name": "国区抖音v29.6.0图层1.2.2",
+     "name": "YouTube Music v6.48.2",
      "type": "1",
-     "bundleID": "com.ss.iphone.ugc.Aweme",
-     "bundleIdentifier": "com.ss.iphone.ugc.Aweme",
-     "version": "29.6.0",
+     "bundleID": "com.google.ios.youtube",
+     "bundleIdentifier": "com.google.ios.youtube",
+     "version": "6.48.2",
      "versionDate": "2024-04-16",
-     "fullDate": "20240416002640",
-     "size": 290455552,
-     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/Douyin_29.6.0TF_ae86.ipa",
-     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/Douyin_29.6.0TF_ae86.ipa",
+     "fullDate": "20240416085855",
+     "size": 79482060,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/YouTube_Music_v6.48.2_ae86.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/YouTube_Music_v6.48.2_ae86.ipa",
      "developerName": "秋名山",
-     "localizedDescription": "注入抖音图层插件，双指双击呼出界面，可设置各种功能！\n最新TF测试版",
-     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.ss.iphone.ugc.Aweme.jpg",
-     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.ss.iphone.ugc.Aweme.jpg",
-    },
+     "localizedDescription": "注入插件(去广告，后台播放等)，播放速度、主题选项等，新版插件能下载歌曲，但是需要先听歌先缓存，然后再下载即可。\n插件设置在右上角头像—底部YTMusicUltimate里。\n相关说明：\n注意：首次安装，建议先在AppStore里安装，然后TrollStore覆盖安装。\n如果越狱机使用，建议屏蔽YTM的越狱检测。",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.google.ios.youtube.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.google.ios.youtube.jpg",
+    },  
     {
      "name": "百度地图xx广告_19.8.0",
      "type": "1",
@@ -42,5 +42,21 @@
      "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.baidu.map.jpg",
      "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.baidu.map.jpg",
     },
+    {
+     "name": "国区抖音v29.6.0图层1.2.2",
+     "type": "1",
+     "bundleID": "com.ss.iphone.ugc.Aweme",
+     "bundleIdentifier": "com.ss.iphone.ugc.Aweme",
+     "version": "29.6.0",
+     "versionDate": "2024-04-16",
+     "fullDate": "20240416002640",
+     "size": 290455552,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/Douyin_29.6.0TF_ae86.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/Douyin_29.6.0TF_ae86.ipa",
+     "developerName": "秋名山",
+     "localizedDescription": "注入抖音图层插件，双指双击呼出界面，可设置各种功能！\n最新TF测试版",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.ss.iphone.ugc.Aweme.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.ss.iphone.ugc.Aweme.jpg",
+    }
   ]
 }
