--- a/apps.json
+++ b/apps.json
@@ -10,11 +10,111 @@
         "repoIcon": ""
     },
   "apps": [
+  
+  
+  
+  
+    {
+     "name": "王者荣耀",
+     "type": "1",
+     "bundleID": "com.tencent.smoba",
+     "bundleIdentifier": "com.tencent.smoba",
+     "version": "9.3.10602",
+     "versionDate": "2024-04-16",
+     "fullDate": "20240416213338",
+     "size": 1656750080,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/HeroMoba_9.3.10602_Decrypted_ae86.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/HeroMoba_9.3.10602_Decrypted_ae86.ipa",
+     "developerName": "秋名山",
+     "localizedDescription": "秋名山\n全权限，仅砸壳！\n砸个王者看看，万一有人需要多开呢！",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.smoba.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.smoba.jpg",
+    },
+    {
+     "name": "微信_8.0.48_官替9合1_update13",
+     "type": "1",
+     "bundleID": "com.tencent.xin",
+     "bundleIdentifier": "com.tencent.xin",
+     "version": "8.0.48",
+     "versionDate": "2024-04-16",
+     "fullDate": "20240416145753",
+     "size": 371195904,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/WeChat_8.0.48_OfficialReplace9in1_update13_ae86.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/WeChat_8.0.48_OfficialReplace9in1_update13_ae86.ipa",
+     "developerName": "秋名山",
+     "localizedDescription": "秋名山\nhttps://t.me/ae86_ios/4731\n更多详情，点击上面的链接～\nMisaka授权方式：进入公众号—自助授权—图片授权——识别二维码即可。\n更新日志：\nMisaka助手 1.9-2",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.xin.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.xin.jpg",
+    },
+    {
+     "name": "微信_8.0.33_官替9合1_update30",
+     "type": "1",
+     "bundleID": "com.tencent.xin",
+     "bundleIdentifier": "com.tencent.xin",
+     "version": "8.0.33",
+     "versionDate": "2024-04-16",
+     "fullDate": "20240416145433",
+     "size": 316669952,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/WeChat_8.0.33_OfficialReplace9in1_update30_ae86.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/WeChat_8.0.33_OfficialReplace9in1_update30_ae86.ipa",
+     "developerName": "秋名山",
+     "localizedDescription": "秋名山\nhttps://t.me/ae86_ios/4731\n更多详情，点击上面的链接～\nMisaka授权方式：进入公众号—自助授权—图片授权——识别二维码即可。\n更新日志：\nMisaka助手 1.9-2",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.xin.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.xin.jpg",
+    },
+    {
+     "name": "微信_8.0.31_官替9合1_update140",
+     "type": "1",
+     "bundleID": "com.tencent.xin",
+     "bundleIdentifier": "com.tencent.xin",
+     "version": "8.0.31",
+     "versionDate": "2024-04-16",
+     "fullDate": "20240416145306",
+     "size": 299892736,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/WeChat_8.0.31_OfficialReplace9in1_update140_ae86.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/WeChat_8.0.31_OfficialReplace9in1_update140_ae86.ipa",
+     "developerName": "秋名山",
+     "localizedDescription": "秋名山\nhttps://t.me/ae86_ios/4731\n更多详情，点击上面的链接～\nMisaka授权方式：进入公众号—自助授权—图片授权——识别二维码即可。\n更新日志：\nMisaka助手 1.9-2",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.xin.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.xin.jpg",
+    },
+    {
+     "name": "微信_8.0.49TF_9合1_update3",
+     "type": "1",
+     "bundleID": "com.tencent.xin",
+     "bundleIdentifier": "com.tencent.xin",
+     "version": "8.0.49TF",
+     "versionDate": "2024-04-16",
+     "fullDate": "20240416145120",
+     "size": 368050176,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/WeChat_8.0.49TF_9in1_update3_ae86.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/WeChat_8.0.49TF_9in1_update3_ae86.ipa",
+     "developerName": "秋名山",
+     "localizedDescription": "秋名山\nhttps://t.me/ae86_ios/4731\n更多详情，点击上面的链接～\nMisaka授权方式：进入公众号—自助授权—图片授权——识别二维码即可。\n更新日志：\nMisaka助手 1.9-2",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.xin.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.xin.jpg",
+    },
+    {
+     "name": "Soul_5.21",
+     "type": "1",
+     "bundleID": "com.soulapp.cn",
+     "bundleIdentifier": "com.soulapp.cn",
+     "version": "5.21",
+     "versionDate": "2024-04-16",
+     "fullDate": "20240416135239",
+     "size": 182452224,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/SOUL_5.21.0_ae86.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/SOUL_5.21.0_ae86.ipa",
+     "developerName": "秋名山",
+     "localizedDescription": "秋名山\n神秘交友软件，破解了广场私聊和去广告。\n广场私聊不用送礼物，直接开整吧，伙计们。",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.soulapp.cn.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.soulapp.cn.jpg",
+    },
     {
      "name": "YouTube Music v6.48.2",
      "type": "1",
-     "bundleID": "com.google.ios.youtube",
-     "bundleIdentifier": "com.google.ios.youtube",
+     "bundleID": "com.google.ios.youtubemusic",
+     "bundleIdentifier": "com.google.ios.youtubemusic",
      "version": "6.48.2",
      "versionDate": "2024-04-16",
      "fullDate": "20240416085855",
@@ -22,10 +122,10 @@
      "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/YouTube_Music_v6.48.2_ae86.ipa",
      "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/YouTube_Music_v6.48.2_ae86.ipa",
      "developerName": "秋名山",
-     "localizedDescription": "注入插件(去广告，后台播放等)，播放速度、主题选项等，新版插件能下载歌曲，但是需要先听歌先缓存，然后再下载即可。\n插件设置在右上角头像—底部YTMusicUltimate里。\n相关说明：\n注意：首次安装，建议先在AppStore里安装，然后TrollStore覆盖安装。\n如果越狱机使用，建议屏蔽YTM的越狱检测。",
-     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.google.ios.youtube.jpg",
-     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.google.ios.youtube.jpg",
-    },  
+     "localizedDescription": "私名山\n注入插件(去广告，后台播放等)，播放速度、主题选项等，新版插件能下载歌曲，但是需要先听歌先缓存，然后再下载即可。\n插件设置在右上角头像—底部YTMusicUltimate里。\n相关说明：\n注意：首次安装，建议先在AppStore里安装，然后TrollStore覆盖安装。\n如果越狱机使用，建议屏蔽YTM的越狱检测。",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.google.ios.youtubemusic.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.google.ios.youtubemusic.jpg",
+    },
     {
      "name": "百度地图xx广告_19.8.0",
      "type": "1",
@@ -34,11 +134,11 @@
      "version": "19.8.0",
      "versionDate": "2024-04-16",
      "fullDate": "20240416083858",
-     "size": 290455552,
+     "size": 157286400,
      "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/BaiduMap_19.8.0_ae86.ipa",
      "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/BaiduMap_19.8.0_ae86.ipa",
      "developerName": "秋名山",
-     "localizedDescription": "注入xx广告插件(图层开发者)，功能默认开启，移除底部周边/移除底部打车/移除底部公共交通/搜索仅保留历史记录/移除行程分享。\n相关说明：\n插件启用：单指长按设置页面弹出菜单\n更新日志：App更新",
+     "localizedDescription": "秋名山\n注入xx广告插件(图层开发者)，功能默认开启，移除底部周边/移除底部打车/移除底部公共交通/搜索仅保留历史记录/移除行程分享。\n相关说明：\n插件启用：单指长按设置页面弹出菜单\n更新日志：App更新",
      "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.baidu.map.jpg",
      "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.baidu.map.jpg",
     },
@@ -54,7 +154,7 @@
      "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/Douyin_29.6.0TF_ae86.ipa",
      "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/Douyin_29.6.0TF_ae86.ipa",
      "developerName": "秋名山",
-     "localizedDescription": "注入抖音图层插件，双指双击呼出界面，可设置各种功能！\n最新TF测试版",
+     "localizedDescription": "秋名山\n注入抖音图层插件，双指双击呼出界面，可设置各种功能！\n最新TF测试版",
      "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.ss.iphone.ugc.Aweme.jpg",
      "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.ss.iphone.ugc.Aweme.jpg",
     }
