--- a/apps.json
+++ b/apps.json
@@ -1,34 +1,222 @@
 {
-    "name": "CN Dev IPA Mirror",
-    "identifier": "cn.ipa.devs.ipamirror",
+    "name": "CN IPA Mirror",
+    "identifier": "cn.ipa.mirror",
     "sourceURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/apps.json",
     "iconURL": "",
     "website": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/apps.json",
-    "subtitle": "CN Dev IPA Mirror",
+    "subtitle": "CN IPA Mirror",
     "META": {
-        "repoName": "CN Dev IPA Mirror",
+        "repoName": "CN IPA Mirror",
         "repoIcon": ""
     },
   "apps": [
-  
-  
-  
-  
     {
-     "name": "王者荣耀",
+     "name": "高德地图",
      "type": "1",
-     "bundleID": "com.tencent.smoba",
-     "bundleIdentifier": "com.tencent.smoba",
-     "version": "9.3.10602",
-     "versionDate": "2024-04-16",
-     "fullDate": "20240416213338",
-     "size": 1656750080,
-     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/HeroMoba_9.3.10602_Decrypted_ae86.ipa",
-     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/HeroMoba_9.3.10602_Decrypted_ae86.ipa",
-     "developerName": "秋名山",
-     "localizedDescription": "秋名山\n全权限，仅砸壳！\n砸个王者看看，万一有人需要多开呢！",
-     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.smoba.jpg",
-     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.smoba.jpg",
+     "bundleID": "com.autonavi.amap",
+     "bundleIdentifier": "com.autonavi.amap",
+     "version": "13.13.1",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 274726912,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Amap_13.13.1_decrypted_tweak.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Amap_13.13.1_decrypted_tweak.ipa",
+     "developerName": "",
+     "localizedDescription": "高德地图_13.13.1_砸壳破解版",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.autonavi.amap.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.autonavi.amap.jpg",
+    },
+    {
+     "name": "Spotify",
+     "type": "1",
+     "bundleID": "com.spotify.client",
+     "bundleIdentifier": "com.spotify.client",
+     "version": "8.6.42",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 40789606,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Sposilife-8.6.42.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Sposilife-8.6.42.ipa",
+     "developerName": "",
+     "localizedDescription": "",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.spotify.client.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.spotify.client.jpg",
+    },
+    {
+     "name": "Reddit Plus",
+     "type": "1",
+     "bundleID": "com.reddit.Reddit",
+     "bundleIdentifier": "com.reddit.Reddit",
+     "version": "2024.13.0",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 123731968,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/RedditPlus-2024.13.0.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/RedditPlus-2024.13.0.ipa",
+     "developerName": "",
+     "localizedDescription": "",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.reddit.Reddit.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.reddit.Reddit.jpg",
+    },
+    {
+     "name": "ImgPlay",
+     "type": "1",
+     "bundleID": "me.imgbase.imgplay",
+     "bundleIdentifier": "me.imgbase.imgplay",
+     "version": "6.1.14",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 97936998,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/imgplay_6.1.14_crack.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/imgplay_6.1.14_crack.ipa",
+     "developerName": "",
+     "localizedDescription": "Crack",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/me.imgbase.imgplay.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/me.imgbase.imgplay.jpg",
+    },
+    {
+     "name": "Facebook Wolf",
+     "type": "1",
+     "bundleID": "com.facebook.Facebook",
+     "bundleIdentifier": "com.facebook.Facebook",
+     "version": "459.0.5",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 146800640,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/FacebookWolf-459.0.5.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/FacebookWolf-459.0.5.ipa",
+     "developerName": "",
+     "localizedDescription": "",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.facebook.Facebook.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.facebook.Facebook.jpg",
+    },
+    {
+     "name": "Duolingo",
+     "type": "1",
+     "bundleID": "com.duolingo.DuolingoMobile",
+     "bundleIdentifier": "com.duolingo.DuolingoMobile",
+     "version": "6.196.0",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 124780544,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Duolingo.6.196.0_crack.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Duolingo.6.196.0_crack.ipa",
+     "developerName": "",
+     "localizedDescription": "Crack",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.duolingo.DuolingoMobile.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.duolingo.DuolingoMobile.jpg",
+    },
+    {
+     "name": "Adobe Acrobat Reader",
+     "type": "1",
+     "bundleID": "com.adobe.Adobe-Reader",
+     "bundleIdentifier": "com.adobe.Adobe-Reader",
+     "version": "24.03.00",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 158334976,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/AdobeAcrobatReader_24.03.00_PremiumFeaturesUnlocked_@thisismanpreets_apptesters.org.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/AdobeAcrobatReader_24.03.00_PremiumFeaturesUnlocked_@thisismanpreets_apptesters.org.ipa",
+     "developerName": "",
+     "localizedDescription": "AppTester.org\nPremium Features Unlocked",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.adobe.Adobe-Reader.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.adobe.Adobe-Reader.jpg",
+    },
+    {
+     "name": "BHTwitter",
+     "type": "1",
+     "bundleID": "com.bandarhl.bhtwitter",
+     "bundleIdentifier": "com.bandarhl.bhtwitter",
+     "version": "10.26",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 126877696,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/BHTwitter-sideloaded.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/BHTwitter-sideloaded.ipa",
+     "developerName": "",
+     "localizedDescription": "BandarHL\nBHTwitter",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhtwitter.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhtwitter.jpg",
+    },
+    {
+     "name": "BHTwitter [deb]",
+     "type": "5",
+     "bundleID": "com.bandarhl.bhtwitter",
+     "bundleIdentifier": "com.bandarhl.bhtwitter",
+     "version": "4.3-1+debug_iphoneos-arm64",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 8692695,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/com.bandarhl.bhtwitter_4.3-1+debug_iphoneos-arm64.deb",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/com.bandarhl.bhtwitter_4.3-1+debug_iphoneos-arm64.deb",
+     "developerName": "",
+     "localizedDescription": "BandarHL",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhtwitter.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhtwitter.jpg",
+    },
+    {
+     "name": "BHTwitter [deb]",
+     "type": "5",
+     "bundleID": "com.bandarhl.bhtwitter",
+     "bundleIdentifier": "com.bandarhl.bhtwitter",
+     "version": "4.3-1+debug_iphoneos-arm",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 8692695,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/com.bandarhl.bhtwitter_4.3-1+debug_iphoneos-arm.deb",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/com.bandarhl.bhtwitter_4.3-1+debug_iphoneos-arm.deb",
+     "developerName": "",
+     "localizedDescription": "BandarHL",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhtwitter.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhtwitter.jpg",
+    },
+    {
+     "name": "BHInstagram",
+     "type": "1",
+     "bundleID": "com.bandarhl.bhinsta",
+     "bundleIdentifier": "com.bandarhl.bhinsta",
+     "version": "290.1",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 128974848,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Instagram_290.1_BHInstagram_0.0.1.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Instagram_290.1_BHInstagram_0.0.1.ipa",
+     "developerName": "",
+     "localizedDescription": "BandarHL\nBHInstagram_0.0.1",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhinsta.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhinsta.jpg",
+    },
+    {
+     "name": "BHInstagram [deb]",
+     "type": "5",
+     "bundleID": "com.bandarhl.bhinsta",
+     "bundleIdentifier": "com.bandarhl.bhinsta",
+     "version": "0.0.1_iphoneos-arm64",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 69120,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/com.bandarhl.bhinsta_0.0.1_iphoneos-arm64.deb",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/com.bandarhl.bhinsta_0.0.1_iphoneos-arm64.deb",
+     "developerName": "",
+     "localizedDescription": "BandarHL",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhinsta.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhinsta.jpg",
+    },
+    {
+     "name": "BHInstagram [deb]",
+     "type": "5",
+     "bundleID": "com.bandarhl.bhinsta",
+     "bundleIdentifier": "com.bandarhl.bhinsta",
+     "version": "0.0.1_iphoneos-arm",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 69222,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/com.bandarhl.bhinsta_0.0.1_iphoneos-arm.deb",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/com.bandarhl.bhinsta_0.0.1_iphoneos-arm.deb",
+     "developerName": "",
+     "localizedDescription": "BandarHL",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhinsta.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.bandarhl.bhinsta.jpg",
     },
     {
      "name": "微信_8.0.48_官替9合1_update13",
@@ -95,22 +283,6 @@
      "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tencent.xin.jpg",
     },
     {
-     "name": "Soul_5.21",
-     "type": "1",
-     "bundleID": "com.soulapp.cn",
-     "bundleIdentifier": "com.soulapp.cn",
-     "version": "5.21",
-     "versionDate": "2024-04-16",
-     "fullDate": "20240416135239",
-     "size": 182452224,
-     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/SOUL_5.21.0_ae86.ipa",
-     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/SOUL_5.21.0_ae86.ipa",
-     "developerName": "秋名山",
-     "localizedDescription": "秋名山\n神秘交友软件，破解了广场私聊和去广告。\n广场私聊不用送礼物，直接开整吧，伙计们。",
-     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.soulapp.cn.jpg",
-     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.soulapp.cn.jpg",
-    },
-    {
      "name": "YouTube Music v6.48.2",
      "type": "1",
      "bundleID": "com.google.ios.youtubemusic",
@@ -141,22 +313,6 @@
      "localizedDescription": "秋名山\n注入xx广告插件(图层开发者)，功能默认开启，移除底部周边/移除底部打车/移除底部公共交通/搜索仅保留历史记录/移除行程分享。\n相关说明：\n插件启用：单指长按设置页面弹出菜单\n更新日志：App更新",
      "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.baidu.map.jpg",
      "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.baidu.map.jpg",
-    },
-    {
-     "name": "国区抖音v29.6.0图层1.2.2",
-     "type": "1",
-     "bundleID": "com.ss.iphone.ugc.Aweme",
-     "bundleIdentifier": "com.ss.iphone.ugc.Aweme",
-     "version": "29.6.0",
-     "versionDate": "2024-04-16",
-     "fullDate": "20240416002640",
-     "size": 290455552,
-     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/Douyin_29.6.0TF_ae86.ipa",
-     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-16/Douyin_29.6.0TF_ae86.ipa",
-     "developerName": "秋名山",
-     "localizedDescription": "秋名山\n注入抖音图层插件，双指双击呼出界面，可设置各种功能！\n最新TF测试版",
-     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.ss.iphone.ugc.Aweme.jpg",
-     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.ss.iphone.ugc.Aweme.jpg",
     }
   ]
 }
