--- a/apps.json
+++ b/apps.json
@@ -1,15 +1,95 @@
 {
-    "name": "CN IPA Mirror",
-    "identifier": "cn.ipa.mirror",
+    "name": "Self IPA Mirror",
+    "identifier": "self.ipa.mirror",
     "sourceURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/apps.json",
     "iconURL": "",
     "website": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/apps.json",
-    "subtitle": "CN IPA Mirror",
+    "subtitle": "Self IPA Mirror",
     "META": {
-        "repoName": "CN IPA Mirror",
+        "repoName": "Self IPA Mirror",
         "repoIcon": ""
     },
   "apps": [
+    {
+     "name": "Adobe Scan",
+     "type": "1",
+     "bundleID": "com.adobe.scan.ios",
+     "bundleIdentifier": "com.adobe.scan.ios",
+     "version": "24.04.1",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 130023424,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Adobe-Scan_24.04.16_Crack_YQC.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Adobe-Scan_24.04.16_Crack_YQC.ipa",
+     "developerName": "浥轻尘",
+     "localizedDescription": "浥轻尘\n• 纯净无弹窗\n• 购买后解锁高级版\n• 注入 Satella 插件\n• 支持自签和 Troll Store",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.adobe.scan.ios.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.adobe.scan.ios.jpg",
+    },
+    {
+     "name": "淘宝 10.35.10 砸壳破解版",
+     "type": "1",
+     "bundleID": "com.taobao.taobao4iphone",
+     "bundleIdentifier": "com.taobao.taobao4iphone",
+     "version": "10.35.10",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 111149056,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Taobao_10.35.10_Decrpted_Tweak.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Taobao_10.35.10_Decrpted_Tweak.ipa",
+     "developerName": "苓妹妹",
+     "localizedDescription": "苓妹妹\n增强功能:\n更新插件为最新版3.0-8\n显示商品历史价格\n直接领取优惠券",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.taobao.taobao4iphone.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.taobao.taobao4iphone.jpg",
+    },
+    {
+     "name": "iGameGod",
+     "type": "5",
+     "bundleID": "iGameGod.framework",
+     "bundleIdentifier": "iGameGod.framework",
+     "version": "",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 5211422,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/iGameGod.zip",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/iGameGod.zip",
+     "developerName": "",
+     "localizedDescription": "IGG修改器最新版\n使用方法\n下载本软件 分享给签名工具 解压这个压缩包得到里面的插件\n签名IPA游戏的时候 点击添加第三方库 选择 iGameGod.framework 即可\n巨魔用户 使用签名工具 打开仅修改配置不签名  签名完成后分享给巨魔安装即可\n证书用户 直接签名IPA使用\n无论是巨魔还是证书用户 签名游戏统一勾选打开 签名后移除embedded开关",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/iGameGod.framework.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/iGameGod.framework.jpg",
+    },
+    {
+     "name": "Flightradar24",
+     "type": "1",
+     "bundleID": "se.resenatverket.FlightRadar24-Free",
+     "bundleIdentifier": "se.resenatverket.FlightRadar24-Free",
+     "version": "9.19.0",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 153092096,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Flightradar24_9.19.0.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/Flightradar24_9.19.0.ipa",
+     "developerName": "",
+     "localizedDescription": "Gold Subscription Unlocked",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/se.resenatverket.FlightRadar24-Free.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/se.resenatverket.FlightRadar24-Free.jpg",
+    },
+    {
+     "name": "misaka",
+     "type": "1",
+     "bundleID": "com.straight-tamago.misakaRS",
+     "bundleIdentifier": "com.straight-tamago.misakaRS",
+     "version": "8.2.4",
+     "versionDate": "2024-04-19",
+     "fullDate": "20240419000000",
+     "size": 32610713,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/misaka_8.2.4 Beta.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/misaka_8.2.4 Beta.ipa",
+     "developerName": "",
+     "localizedDescription": "",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.straight-tamago.misakaRS.png",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.straight-tamago.misakaRS.png",
+    },
     {
      "name": "高德地图",
      "type": "1",
@@ -75,7 +155,7 @@
      "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/me.imgbase.imgplay.jpg",
     },
     {
-     "name": "Facebook Wolf",
+     "name": "Facebook",
      "type": "1",
      "bundleID": "com.facebook.Facebook",
      "bundleIdentifier": "com.facebook.Facebook",
@@ -86,7 +166,7 @@
      "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/FacebookWolf-459.0.5.ipa",
      "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-19/FacebookWolf-459.0.5.ipa",
      "developerName": "",
-     "localizedDescription": "",
+     "localizedDescription": "Facebook Wolf",
      "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.facebook.Facebook.jpg",
      "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.facebook.Facebook.jpg",
     },
