--- a/apps.json
+++ b/apps.json
@@ -19,8 +19,8 @@
      "versionDate": "2024-04-22",
      "fullDate": "20240422000000",
      "size": 68052582,
-     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-22/EeveeSpotify-8.9.32.ipa",
-     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-22/EeveeSpotify-8.9.32.ipa",
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-22/EeveeSpotify-8.9.32objc-zxcvbn.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-22/EeveeSpotify-8.9.32objc-zxcvbn.ipa",
      "developerName": "",
      "localizedDescription": "swaggyP36000\nAs the successor of the original and now outdated Spotilife tweak, EeveeSpotify emerges as the first and only tweak in 2024 with significant potential for accessing Premium features on latest versions of Spotify.\nNote: Widgets work but their refresh times may be unusually long. The tweak will continue to work if you reinstall Spotify from the App Store over EeveeSpotify but the premium icon will show.\nLast updated: 04-21-2024\nStatus: \u2705 \u2b50 \ud83d\udc4d",
      "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.spotify.client.jpg",
