--- a/apps.json
+++ b/apps.json
@@ -11,6 +11,54 @@
     },
   "apps": [
     {
+     "name": "View Navigator",
+     "type": "1",
+     "bundleID": "com.vntech.ViewNavigator",
+     "bundleIdentifier": "com.vntech.ViewNavigator",
+     "version": "2",
+     "versionDate": "2024-04-23",
+     "fullDate": "20240423000000",
+     "size": 5337251,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-23/View-Navigator_1.1_decrypted.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-23/View-Navigator_1.1_decrypted.ipa",
+     "developerName": "",
+     "localizedDescription": "Decrypted",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.vntech.ViewNavigator.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.vntech.ViewNavigator.jpg",
+    },
+    {
+     "name": "Filza",
+     "type": "1",
+     "bundleID": "com.tigisoftware.Filza",
+     "bundleIdentifier": "com.tigisoftware.Filza",
+     "version": "4.0.0-b3",
+     "versionDate": "2024-04-23",
+     "fullDate": "20240423000000",
+     "size": 13841203,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-23/Filza_4.0.0.ipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-23/Filza_4.0.0.ipa",
+     "developerName": "",
+     "localizedDescription": "IPA file (v4.0.0-b3) for TrollStore\nhttps://www.tigisoftware.com/default/?p=439",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tigisoftware.Filza.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.tigisoftware.Filza.jpg",
+    },
+    {
+     "name": "TrollDecrypt [tipa]",
+     "type": "1",
+     "bundleID": "com.fiore.trolldecrypt",
+     "bundleIdentifier": "com.fiore.trolldecrypt",
+     "version": "1.1",
+     "versionDate": "2024-04-23",
+     "fullDate": "20240423000000",
+     "size": 691200,
+     "down": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-23/TrollDecrypt.tipa",
+     "downloadURL": "https://github.com/Megumi-B/CN-Dev-IPA-Mirror/releases/download/2024-04-23/TrollDecrypt.tipa",
+     "developerName": "",
+     "localizedDescription": "iOS IPA Decrypter for TrollStore\nhttps://github.com/donato-fiore/TrollDecrypt",
+     "icon": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.fiore.trolldecrypt.jpg",
+     "iconURL": "https://raw.githubusercontent.com/Megumi-B/CN-Dev-IPA-Mirror/main/icons/com.fiore.trolldecrypt.jpg",
+    },
+    {
      "name": "EeveeSpotify",
      "type": "1",
      "bundleID": "com.spotify.client",
